# Ages-Of-Aether-Native

./: .gitignore  Cargo.toml  ROADMAP.md  SESSION_NOTES.md
.cargo/: config.toml
.github/workflows/: deploy-web.yml
android/: local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: dummy.cpp
android/app/src/main/java/com/agesofaether/game/: ImmersiveActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml
assets/models/enemies/: cavalry-horse.glb  cavalry-knight.bak.glb  cavalry-knight.glb  caveman.glb  colossus.bak.glb  colossus.glb  dodo.glb  footman.bak.glb  footman.glb  knight.bak.glb  knight.glb  legionary.glb  lion.bak.glb  lion.glb  minotaur-mixamo.glb  minotaur.bak.glb  minotaur.glb  sabertooth.bak.glb  sabertooth.glb  shaman.glb  war-elephant.glb  woolly-rhino.glb
assets/models/enemies/anims/: attack.glb  crouch-walk.glb  die.glb  idle.glb  run.glb  sword-parry.glb  walk.glb
assets/models/golems/: golem-attack.glb  golem-idle.glb  golem-walk.glb  golem.glb
assets/models/heroes/: ice-hulk.glb  northern-outsider.glb  pharaoh.glb  sacred-maiden.glb
assets/models/heroes/anims/: maiden-idle.glb  maiden-melee-kick.glb  melee-combo.glb  mutant-idle.glb  outsider-melee.glb
scripts/: clean_minotaur.py  convert_minotaur.py  gen_icon.py  inspect_anim.py  inspect_minotaur.py
src/: components.rs  data.rs  lib.rs  main.rs  resources.rs  save.rs  states.rs  ui.rs
src/systems/: anim_test.rs  audio.rs  camera.rs  combat.rs  debug.rs  enemy_anim.rs  game_over.rs  golem.rs  hero.rs  hero_ability.rs  input.rs  logbook_preview.rs  mod.rs  path.rs  player_ability.rs  setup.rs  showcase.rs  tower_spec.rs  tutorial.rs  wave.rs
tests/: balance.rs  difficulty_ramp.rs  economy.rs  enemies.rs  regression.rs  towers.rs
web/: index.html  vercel.json
