[package]
name = "ages-of-aether"
version = "0.1.0"
edition = "2021"

[lib]
name = "ages_of_aether"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ages-of-aether"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "android-native-activity",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "jpeg",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "vorbis",
    "wav",
    "x11",
] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Faster compile times during development
[profile.dev]
opt-level = 1

# But keep dependencies optimized even in dev (esp. Bevy)
[profile.dev.package."*"]
opt-level = 3
