[package]
name = "ages-of-aether"
version = "0.1.0"
edition = "2021"

[lib]
name = "ages_of_aether"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ages-of-aether"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "jpeg",
    "png",
    "tonemapping_luts",
    "vorbis",
    "wav",
] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Android: native activity glue
[target.'cfg(target_os = "android")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "android-native-activity",
    "multi_threaded",
] }

# Linux desktop: X11 windowing
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "x11",
    "multi_threaded",
] }

# Other desktop (Windows, macOS): keep multi_threaded for performance
[target.'cfg(all(not(target_os = "android"), not(target_os = "linux"), not(target_arch = "wasm32")))'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "multi_threaded",
] }

# Web (WASM): WebGL2 backend, no multi_threaded (browsers don't support std threads)
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "webgl2",
] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
console_error_panic_hook = "0.1"
# getrandom 0.3 dropped default wasm32-unknown-unknown support; opt into the JS backend
getrandom = { version = "0.3", features = ["wasm_js"] }

# Faster compile times during development
[profile.dev]
opt-level = 1

# But keep dependencies optimized even in dev (esp. Bevy)
[profile.dev.package."*"]
opt-level = 3
